tests/negative/neg_pr113_nested_tuple.safe
package neg_PR113_Nested_Tuple
   value : ((boolean, integer), integer) = ((True, 1), 2);

